--- a/src/login.scss
+++ b/src/login.scss
@@ -1,6 +1,107 @@
 @import './src/common';
 @import '@material/textfield/mdc-text-field';
 @import '@material/button/mdc-button';
+@import '@material/top-app-bar/mdc-top-app-bar';
+@import '@material/typography/mdc-typography';
+@import '@material/layout-grid/mdc-layout-grid';
+@import '@material/fab/mdc-fab';
+
+body {
+  margin: 0;
+}
+
+.fileuploader {
+  position: relative;
+  background: white;
+  width: 100%;
+  height: 400px;
+  border: 1px solid #e9e9e9;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.fileuploader #upload-label {
+  background: #2196f3;
+  color: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  padding: 16px;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  right: 0;
+  width: 200px;
+  margin-right: auto;
+  margin-left: auto;
+  min-width: 20%;
+  text-align: center;
+  padding-top: 40px;
+  transition: 0.8s all;
+  -webkit-transition: 0.8s all;
+  -moz-transition: 0.8s all;
+  cursor: pointer;
+}
+.fileuploader.active {
+  background: #2196f3;
+}
+.fileuploader.active #upload-label {
+  background: #fff;
+  color: #2196f3;
+}
+.fileuploader #upload-label span.title {
+  font-size: 1.1em;
+  font-weight: bold;
+  display: block;
+}
+.fileuploader #upload-label i {
+  text-align: center;
+  display: block;
+  background: white;
+  color: #2196f3;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
+  font-size: 60px;
+  padding-top: 10px;
+  position: absolute;
+  top: -50px;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.demo-controls-box {
+  @include mdc-elevation(4);
+  min-width: 160px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background-color: white;
+  padding: 10px;
+}
+
+.demo-control-checkbox {
+  margin: 12px 0;
+}
+
+.demo-control-checkbox__label {
+  margin: 0 8px;
+}
+
+.demo-control-checkbox--disabled {
+  color: grey;
+}
 
 .header {
   text-align: center;
@@ -13,8 +114,34 @@
   fill: currentColor;
 }
 
-.username,
-.password {
+.iname,
+.iemail,
+.ipassword,
+.ipassword2 {
+  display: block;
+  width: 300px;
+  margin: 20px auto;
+}
+
+.mdc-text-field:not(:last-child) {
+  margin-bottom: 0;
+}
+
+.mdc-text-field-helper-text::before {
+  content: '';
+  display: inline-block;
+  vertical-align: baseline;
+  margin-top: 1rem;
+}
+
+.name,
+.email,
+.password,
+.password2,
+.reference,
+.website,
+.location,
+.description {
   &:not(.mdc-text-field--invalid) {
     @include mdc-text-field-label-color(on-primary);
   }
